# HOCO

./: README.md
HOCO/: CMakeLists.txt  test_CompressModule.cpp  test_EvaluateModule.cpp  test_SchemeCollectModule.cpp
HOCO/CompressModule/: CMakeLists.txt  CompressModule.hpp  Makefile  compress.cpp
HOCO/DataManage/: CompressData.hpp  DataPath.hpp  Makefile  data.cpp
HOCO/EvaluateModule/: CMakeLists.txt  EvaluateModule.hpp  Makefile  evaluate.cpp
HOCO/EvaluateModule/DSL/: Makefile  Parser.hpp  Skeleton.hpp  input.dsl  test_parser.cpp
HOCO/EvaluateModule/GenCode/: Makefile  WordCount.cpp
HOCO/SchemeCollectModule/: CMakeLists.txt  CollectModule.hpp  Factory.hpp  Makefile  collect.cpp  register_example.cpp
HOCO/SchemeCollectModule/schemes/: BaseHC.hpp  LZW_HC.hpp  RLE_HC.hpp  TADOC_HC.hpp  include_list.txt  sequitur_wrapper.hpp
HOCO/SchemeCollectModule/schemes/sequiturBasedEngine/: Makefile  sequitur.cc  sequitur.h
HOCO/Utils/: utils.hpp
results/19NSR/: delete.txt  extract.txt  insert.txt  invertedIndex.txt  sequenceCount.txt  wordCount.txt
results/COV19/: delete.txt  extract.txt  insert.txt  invertedIndex.txt  sequenceCount.txt  wordCount.txt
results/DBLP/: delete.txt  extract.txt  insert.txt  invertedIndex.txt  sequenceCount.txt  wordCount.txt
results/Wikipedia/: delete.txt  extract.txt  insert.txt  invertedIndex.txt  sequenceCount.txt  wordCount.txt
src/Compress_methods/LZW/lzw/: Makefile  compress.cc  decompress.cc  flat_hash_map.hpp  test.txt
src/Compress_methods/LZW/lzwAnalyze/: basics.cpp  basics.h  invertedIndex.cpp  makefile  sequenceCount.cpp  wordCount.cpp
src/Compress_methods/LZW/lzwManipulate/: Makefile  basics.cpp  basics.h  delete.cpp  extract.cpp  insert.cpp
src/Compress_methods/LZW/scripts/: compress.sh  delete.sh  extract.sh  insert.sh  invertedIndex.sh  sequenceCount.sh  wordCount.sh
src/Compress_methods/RLE/rle/: Makefile  compress.cc  compress_origin.cc  rle_compress  rle_compress_origin
src/Compress_methods/RLE/rleAnalyze/: Makefile  basics.cpp  basics.h  invertedIndex.cpp  sequenceCount.cpp  wordCount.cpp
src/Compress_methods/RLE/rleManipulate/: Makefile  basics.cpp  basics.h  delete.cpp  extract.cpp  insert.cpp
src/Compress_methods/RLE/scripts/: compress.sh  delete.sh  extract.sh  insert.sh  invertedIndex.sh  sequenceCount.sh  wordCount.sh
src/Compress_methods/TADOC/TADOC/: README  compile.sh  compress.cc  compress.sh
src/Compress_methods/TADOC/scripts/: compress.sh  delete.sh  extract.sh  insert.sh  invertedIndex.sh  (+2 more)
src/Origin/analytic/: Makefile  invertedIndex.cc  sequenceCount.cc  wordCount.cc
src/Origin/manipulate/: Makefile  delete.cc  extract.cc  insert.cc
src/Origin/scripts/: delete.sh  extract.sh  insert.sh  invertedIndex.sh  sequenceCount.sh  wordCount.sh
src/scripts/: run_analyze.sh  run_compress.sh  run_manipulate.sh
(+53 files in other folders)
